# Help the Developers and yourself.  Just use the C locale and settings
# for the compilation. They can still be overriden by make LANG=<whatever>
# but that is general a not very good idea
LANG=C
LC_ALL=C

BUILT_SOURCES = $(built_texis)
EXTRA_DIST = $(BUILT_SOURCES)

info_TEXINFOS = unserding.texi
unserding_TEXINFOS =
unserding_TEXINFOS += $(built_texis)
unserding_TEXINFOS += unserding.texi

built_texis =

